# zfit

./: .buildinfo  .codeclimate.yml  .gitattributes  .gitignore  .landscape.yml  .pre-commit-config.yaml  .readthedocs.yaml  .readthedocs.yml  .scrutinizer.yml  .travis.yml  API.html  AUTHORS.rst  CHANGELOG.rst  CITATION.cff  CNAME  CONTRIBUTING.rst  HISTORY.rst  LICENSE  MANIFEST.in  Makefile  README.rst  THANKS.rst  _config.yml  ask_a_question.html  authors.html  changelog.html  contributing.html  data.html  debug_negative_weights.py  downloading.html  full_api.html  genindex.html  getting_started.html  history.html  index.html  installation.html  introduction.html  loss.html  minimize.html  model.html  (+80 more)
.github/: ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md  copilot-instructions.md  dependabot.yml  release.yaml
.junie/: guidelines.md
_modules/: _weakrefset.html  abc.html  index.html  ordered_set.html  typing.html
_sources/: API.rst.txt  data.rst.txt  downloading.rst.txt  getting_started.rst.txt  index.rst.txt  loss.rst.txt  minimize.rst.txt  model.rst.txt  parameter.rst.txt  space.rst.txt  zfit.constraint.rst.txt  zfit.core.basefunc.rst.txt  zfit.core.basemodel.rst.txt  zfit.core.baseobject.rst.txt  zfit.core.basepdf.rst.txt  zfit.core.data.rst.txt  zfit.core.dimension.rst.txt  zfit.core.integration.rst.txt  zfit.core.interfaces.rst.txt  zfit.core.limits.rst.txt  zfit.core.loss.rst.txt  zfit.core.math.rst.txt  zfit.core.operations.rst.txt  zfit.core.parameter.rst.txt  zfit.core.rst.txt  zfit.core.sample.rst.txt  zfit.core.tfext.rst.txt  zfit.data.rst.txt  zfit.func.rst.txt  zfit.loss.rst.txt  zfit.minimize.rst.txt  zfit.minimizers.base_tf.rst.txt  zfit.minimizers.baseminimizer.rst.txt  zfit.minimizers.fitresult.rst.txt  zfit.minimizers.interface.rst.txt  zfit.minimizers.minimizer_minuit.rst.txt  zfit.minimizers.minimizer_tfp.rst.txt  zfit.minimizers.minimizers_scipy.rst.txt  zfit.minimizers.optimizers_tf.rst.txt  zfit.minimizers.rst.txt  (+29 more)
_static/: bootstrap-sphinx.css  documentation_options.js
api/: zfit.constraint.html  zfit.core.basefunc.html  zfit.core.basemodel.html  zfit.core.baseobject.html  zfit.core.basepdf.html  zfit.core.constraint.html  zfit.core.coordinates.html  zfit.core.data.html  zfit.core.dependents.html  zfit.core.dimension.html  zfit.core.html  zfit.core.integration.html  zfit.core.interfaces.html  zfit.core.limits.html  zfit.core.loss.html  zfit.core.math.html  zfit.core.operations.html  zfit.core.parameter.html  zfit.core.sample.html  zfit.core.space.html  zfit.core.testing.html  zfit.core.tfext.html  zfit.data.html  zfit.dimension.html  zfit.exception.html  zfit.func.html  zfit.html  zfit.loss.html  zfit.minimize.html  zfit.minimizers.base_tf.html  zfit.minimizers.baseminimizer.html  zfit.minimizers.fitresult.html  zfit.minimizers.html  zfit.minimizers.interface.html  zfit.minimizers.minimizer_minuit.html  zfit.minimizers.minimizer_tfp.html  zfit.minimizers.minimizers_scipy.html  zfit.minimizers.optimizers_tf.html  zfit.minimizers.tf_external_optimizer.html  zfit.models.basefunctor.html  (+39 more)
coverage/: .gitignore
docs/: .gitignore  API.rst  Makefile  ask_a_question.rst  bayesian_inference.rst  conf.py  data.rst  data_handling.rst  downloading.rst  full_api.rst  getting_started.rst  hyperlinks.txt  index.rst  installation.rst  introduction.rst  loss.rst  make_docs.sh  minimize.rst  model.rst  parameter.rst  prepare_apidocs.sh  project.rst  refs.bib  space.rst  subst_types.rst  subst_types.txt  usage.rst  user_api.rst
examples/: ang_example.py  bayesian_inference.py  binned_gaussfit.py  binned_template_simple.py  cb_example.py  composing_pdf.py  custom_3d_functor.py  custom_3d_pdf_simple.py  custom_parabola_fit.py  custom_pdf_advanced.py  custom_pdf_simple.py  data_test.py  dist_test.py  example_requirements.txt  minimize_python_func.py  multidim_preprocess_fit.py  plot_sig_bkg.py  signal_bkg_mass_extended_fit.py  signal_bkg_mass_extended_fit_binned.py  signal_bkg_mass_fit.py  simple_dist1.ipynb  simple_fit.py  simple_fit_binned.py  simultaneous_fit.py  spaces.py  test.py  weighted_fit.py
full_api/: zfit.constraint.html  zfit.core.basefunc.html  zfit.core.basemodel.html  zfit.core.baseobject.html  zfit.core.basepdf.html  zfit.core.constraint.html  zfit.core.coordinates.html  zfit.core.data.html  zfit.core.dependents.html  zfit.core.dimension.html  zfit.core.html  zfit.core.integration.html  zfit.core.interfaces.html  zfit.core.loss.html  zfit.core.operations.html  zfit.core.parameter.html  zfit.core.sample.html  zfit.core.space.html  zfit.core.testing.html  zfit.data.html  zfit.dimension.html  zfit.exception.html  zfit.func.html  zfit.html  zfit.loss.html  zfit.minimize.html  zfit.minimizers.base_tf.html  zfit.minimizers.baseminimizer.html  zfit.minimizers.errors.html  zfit.minimizers.fitresult.html  zfit.minimizers.html  zfit.minimizers.interface.html  zfit.minimizers.minimizer_minuit.html  zfit.minimizers.minimizer_tfp.html  zfit.minimizers.minimizers_scipy.html  zfit.minimizers.optimizers_tf.html  zfit.minimizers.tf_external_optimizer.html  zfit.models.basefunctor.html  zfit.models.basic.html  zfit.models.convolution.html  (+34 more)
getting_started/: 5_minutes_to_zfit.html  examples.html  index.html  installation.html
intro/: data.html  loss.html  minimize.html  model.html  parameter.html  space.html
legacy/: old_test_range.py  optimization.py  optimization_very_old.py
project/: authors.html  changelog.html  contributing.html  index.html  installation.html  upgrade_guide.html
tests/: __init__.py  binnednll.py  conftest.py  test_accept_reject_performance.py  test_approximations.py  test_basePDF.py  test_binned_integration.py  test_binnedloss.py  test_binnednll.py  test_binnedpdf.py  test_binnedpdf_autoextension.py  test_binnedpdf_unbinned_data.py  test_binning.py  test_cache.py  test_cacheable_pdf.py  test_constraint.py  test_coordinates.py  test_data.py  test_dependencies.py  test_dependents.py  test_dimensions.py  test_duplicate_param_names.py  test_execution.py  test_extended.py  test_fitresult.py  test_functor_pdf.py  test_graph.py  test_histogram.py  (+57 more)
(+1282 files in other folders)
