[metadata]
name = zfit
description = scalable pythonic model fitting for high energy physics
long_description = file: README.rst
long_description_content_type = text/x-rst
url = https://github.com/zfit/zfit
author = Jonas Eschle
maintainer = zfit
maintainer_email = zfit@physik.uzh.ch
license = BSD-3-Clause
license_file = LICENSE
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Science/Research
    License :: OSI Approved :: BSD License
    Natural Language :: English
    Operating System :: MacOS
    Operating System :: Unix
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Topic :: Scientific/Engineering :: Physics
keywords = TensorFlow, model, fitting, scalable, HEP

[options]
packages = find:
python_requires = >=3.6,<3.9
include_package_data = True
testpaths = tests
tests_require =
    pytest>=3.4.2,<5.4  # breaks unittests
    pytest-runner>=2.11.1
    pytest-rerunfailures>=6
    pytest-xdist
    pytest-ordering
    pytest-randomly
    scikit-hep-testdata
    pytest-timeout>=1
    matplotlib  # for plots in examples
zip_safe = False

[bdist_wheel]
universal = 1

[flake8]
exclude =
    docs,
    examples,
    dist,
    building,
    build,
    legacy,
    utils
max-line-length = 110
statistics = True
max-complexity = 30

[tool:pytest]
collect_ignore = setup.py
addopts = -Wd
