[metadata]
name = zfit
description = scalable pythonic model fitting for high energy physics
long_description = file: README.rst
long_description_content_type = text/x-rst
url = https://github.com/zfit/zfit
author = Jonas Eschle <Jonas.Eschle@cern.ch>, Albert Puig <apuignav@gmail.com>, Rafael Silva Coutinho <rsilvaco@cern.ch>, Matthieu Marinangeli <matthieu.marinangeli@cern.ch>
maintainer = zfit
maintainer_email = zfit@physik.uzh.ch
license = BSD-3-Clause
license_file = LICENSE
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Science/Research
    License :: OSI Approved :: BSD License
    Natural Language :: English
    Operating System :: MacOS
    Operating System :: Unix
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Scientific/Engineering :: Physics
keywords = TensorFlow, model, fitting, scalable, HEP

[options]
packages = find:
python_requires = >=3.7,<3.10
include_package_data = True
testpaths = tests
zip_safe = False

[bdist_wheel]
universal = 1

[flake8]
exclude =
    docs,
    examples,
    dist,
    building,
    build,
    legacy,
    utils
max-line-length = 110
statistics = True
max-complexity = 30

[tool:pytest]
collect_ignore = setup.py
addopts = -Wd
